--- a/ kindeditor/3.x/skins/default.css
+++ b/ kindeditor/3.x/skins/default.css
@@ -2,13 +2,11 @@
 	padding: 2px;
 	text-align: left;
 }
-
 .ke-container {
 	border: 3px solid #CCCCCC;
 	background-color: #F0F0EE;
 	padding: 1px;
 }
-
 .ke-textarea {
 	margin: 0;
 	padding: 0;
@@ -16,34 +14,29 @@
 	background-color: #FFFFFF;
 	color: #000000;
 	font-size: 12px;
-	font-family: Courier New;
+	font-family: "sans serif",tahoma,verdana,helvetica;
 	line-height: 16px;
 }
-
 .ke-form {
 	border: 1px solid #CCCCCC;
 	background-color: #FFFFFF;
 }
-
 .ke-icon {
 	border: 1px solid #F0F0EE;
 	margin: 0 1px 0 1px;
 	cursor: pointer;
 }
-
 .ke-icon-selected {
-	border: 1px solid #0021b0;
+	border: 1px solid #1F3D74;
 	margin: 0 1px 0 1px;
 	cursor: pointer;
 }
-
 .ke-icon-disabled {
 	border: 1px solid #F0F0EE;
 	margin: 0 1px 0 1px;
 	filter: gray() alpha(opacity=50);
 	opacity: 0.50;
 }
-
 .ke-menu {
 	border-top: 2px solid #DDDDDD;
 	border-left: 2px solid #DDDDDD;
@@ -54,7 +47,6 @@
 	font-size: 12px;
 	text-align: left;
 }
-
 .ke-menu-noselected {
 	background-color: #F0F0EE;
 	color: #222222;
@@ -62,30 +54,20 @@
 	padding: 2px;
 	cursor: pointer;
 }
-
 .ke-menu-selected {
-	background-color: #0021b0;
+	background-color: #1F3D74;
 	color: #FFFFFF;
 	font-size: 12px;
 	padding: 2px;
 	cursor: pointer;
 }
-
-.ke-box {
-	position: absolute;
-	z-index: 10000;
-	border-top: 2px solid #DDDDDD;
-	border-left: 2px solid #DDDDDD;
-	border-right: 2px solid #AAAAAA;
-	border-bottom: 2px solid #AAAAAA;
-	background-color: #F0F0EE;
-	color: #222222;
-	text-align: left;
-}
-
 .ke-dialog {
 	position: absolute;
-	z-index: 10000;
+	z-index: 10001;
+}
+.ke-box {
+	position: absolute;
+	z-index: 10002;
 	border-top: 2px solid #DDDDDD;
 	border-left: 2px solid #DDDDDD;
 	border-right: 2px solid #AAAAAA;
@@ -94,12 +76,46 @@
 	color: #222222;
 	text-align: left;
 }
-
+.ke-box-title {
+	background-color: #1F3D74;
+	padding: 4px;
+	color: #FFFFFF;
+	font-weight: bold;
+	text-align: left;
+	font-size: 12px;
+	font-family: "sans serif",tahoma,verdana,helvetica;
+}
+.ke-box-body {
+	position: absolute;
+	text-align: center;
+	font-size: 12px;
+	font-family: "sans serif",tahoma,verdana,helvetica;
+}
+.ke-box-close {
+	position: absolute;
+	top: 4px;
+	right: 4px;
+	cursor: pointer;
+}
+.ke-mask {
+	position: absolute;
+	z-index: 10000;
+	top: 0;
+	left: 0;
+	display: none;
+	background-color: #FFFFFF;
+	filter: gray() alpha(opacity=50);
+	opacity: 0.50;
+}
 .ke-button {
 	background-color: #DDDDDD;
-	border: #000000;
+	border-top: 2px solid #DDDDDD;
+	border-left: 2px solid #DDDDDD;
+	border-right: 2px solid #AAAAAA;
+	border-bottom: 2px solid #AAAAAA;
+	cursor: pointer;
+	font-size: 12px;
 }
-
 .ke-picker-cell {
 	width: 12px;
 	height: 12px;
