--- a/examples/index.css
+++ b/examples/index.css
@@ -1,6 +1,10 @@
-body {
-    font-family:Courier New;
-    font-size:12px;
-    margin:2px;
-    background-color:#ffffff;
+html,body {
+    margin: 0;
+    padding: 0;
+}
+
+.ke-content {
+    font-family: Courier New;
+    font-size: 12px;
+    background-color: #ffffff;
 }
