--- a/skins/tinymce.css
+++ b/skins/tinymce.css
@@ -229,22 +229,24 @@
 }
 .ke-container {
     border: 1px solid #CCCCCC;
-    background-color: #FFFFFF;
+    background-color: #F0F0EE;
     table-layout: fixed;
     overflow: hidden;
+    border-collapse:separate;
+}
+.ke-container td {
+    border:0;
+}
+.ke-toolbar-outer {
+    border: 0;
+    padding: 2px 5px;
+    margin: 0;
 }
 .ke-toolbar {
-    border-bottom: 1px solid #CCCCCC;
-    background-color: #F0F0EE;
     width: 100%;
     padding:0;
     margin:0;
     border-collapse:separate;
-}
-.ke-toolbar-td {
-    border: 0;
-    padding: 2px 5px;
-    margin: 0;
 }
 .ke-toolbar-table {
     font-size: 0;
@@ -254,9 +256,6 @@
     margin:0;
     border-collapse:separate;
 }
-.ke-toolbar-table td {
-    border:0;
-}
 .ke-toolbar-close {
     display: block;
     background-position: -902px -2px;
@@ -265,20 +264,13 @@
     position: absolute;
     margin-top: 2px;
     margin-right: 3px;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
     cursor: pointer;
-}
-.ke-form {
-    border: 1px solid #FFFFFF;
-    background-color: #FFFFFF;
-    margin-left: 1px;
-    margin-right: 1px;
 }
 .ke-bottom {
     width: 100%;
     font-size: 0;
-    height: 5px;
     padding:0;
     margin:0;
     border-collapse:separate;
@@ -302,6 +294,19 @@
     width: 10px;
     height: 10px;
 }
+.ke-textarea-outer {
+    padding: 0;
+    margin: 0;
+}
+.ke-textarea-table {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+    background-color: #FFFFFF;
+    border-collapse:separate;
+}
 .ke-textarea {
     width: 100%;
     margin: 0;
@@ -318,6 +323,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    border: 0;
     background-color: #FFFFFF;
 }
 .ke-common-icon {
@@ -344,7 +350,7 @@
     display: block;
     border: 1px solid #1F3D74;
     background-color: #B2BBD0;
-    padding: 0px;
+    padding: 0;
     margin: 1px;
     cursor: pointer;
 }
