--- a/skins/default.css
+++ b/skins/default.css
@@ -238,7 +238,7 @@
 }
 .ke-toolbar-outer {
     border: 0;
-    padding: 2px 5px;
+    padding: 0;
     margin: 0;
 }
 .ke-toolbar {
@@ -249,7 +249,7 @@
 }
 .ke-toolbar td {
     border:0;
-    padding:0;
+    padding: 2px 5px;
     margin:0;
 }
 .ke-toolbar-table {
@@ -259,6 +259,11 @@
     padding:0;
     margin:0;
     border-collapse:separate;
+}
+.ke-toolbar-table td {
+    border:0;
+    padding: 0;
+    margin:0;
 }
 .ke-toolbar-close {
     display: block;
