--- a/skins/oxygen.css
+++ b/skins/oxygen.css
@@ -324,6 +324,8 @@
 	display: block;
 	background-repeat: no-repeat;
 	overflow: hidden;
+}
+.ke-common-icon-url {
 	background-image: url(./oxygen/oxygen.gif);
 }
 .ke-icon {
