[trunk] Fixed bug

--- a/skins/oxygen.css
+++ b/skins/oxygen.css
@@ -529,7 +529,7 @@
 	margin:0;
 	padding:0;
 }
-.ke-plugin-table-td-top {
+.ke-plugin-table-td-bottom {
 	font-size:12px;
 	text-align:center;
 	height:20px;
