[trunk] Modified skins

--- a/skins/office.css
+++ b/skins/office.css
@@ -250,7 +250,7 @@
 	right: 0;
 	top: 0;
 	cursor: pointer;
-	background-image: url(./default/default.gif);
+	background-image: url(./office/office.gif);
 }
 .ke-bottom-outer {
 	border: 0;
@@ -282,7 +282,7 @@
 	background-position: -4px -740px;
 	width: 12px;
 	height: 12px;
-	background-image: url(./default/default.gif);
+	background-image: url(./office/office.gif);
 }
 .ke-textarea-outer {
 	border: 0;
@@ -326,7 +326,7 @@
 	overflow: hidden;
 }
 .ke-common-icon-url {
-	background-image: url(./default/default.gif);
+	background-image: url(./office/office.gif);
 }
 .ke-icon {
 	display: block;
