--- a/skins/default.css
+++ b/skins/default.css
@@ -306,6 +306,7 @@
 	border: 1px solid #CCCCCC;
 	background-color: #FFFFFF;
 	border-collapse:separate;
+	table-layout: fixed;
 }
 .ke-textarea-table td {
 	border:0;
