[trunk] Merged from branches/3.5

--- a/skins/common/editor.css
+++ b/skins/common/editor.css
@@ -38,3 +38,9 @@ p {
 	width:100px;
 	height:100px;
 }
+table {
+	border-collapse:collapse;
+}
+table.ke-zeroborder td {
+	border:1px dotted #AAAAAA;
+}
